--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,30 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-actix-web = "4"
-sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
-tokio = { version = "1", features = ["full"] }
-tokio-tungstenite = "0.21"
-futures-util = "0.3"
-uuid = "1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-openssl = { version = "0.10", features = ["vendored"] }
-base64 = "0.21"
+sqlx = { version = "0.8.6", features = [
+    "postgres",
+    "uuid",
+    "chrono",
+    "runtime-tokio-native-tls",
+    "rust_decimal",
+] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+tokio-tungstenite = "0.27.0"
+futures-util = "0.3.31"
+uuid = { version = "1.18.0", features = ["v7", "serde"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
+chrono = { version = "0.4.41", features = ["serde"] }
+once_cell = "1.21.3"
+futures = "0.3.31"
+rust_decimal = "1.37.2"
+dotenvy = "0.15"
+anyhow = "1.0.98"
+reqwest = { version = "0.12.22", features = ["blocking", "json"] }
+url = "2.5"
+argon2 = "0.5.3"
+password-hash = "0.5.0"
+validator = "0.20.0"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "local-time"] }
+tracing-appender = "0.2.3"
